@@ -1,5 +1,5 @@
 /*
- * Copyright 2013 the original author or authors.
+ * Copyright 2016 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,11 +17,11 @@
 
 package com.jayway.restassured.internal.http
 
-class CharsetExtractor {
+class BoundaryExtractor {
 
-  private static final String CHARSET = "charset"
+  private static final String BOUNDARY = "boundary"
 
-  public static String getCharsetFromContentType(String contentType) {
-    ContentTypeSubTypeExtractor.getSubTypeValueFromContentType(contentType, CHARSET);
+  public static String getBoundaryFromContentType(String contentType) {
+    ContentTypeSubTypeExtractor.getSubTypeValueFromContentType(contentType, BOUNDARY);
   }
 }
